# MyNut

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/alexm/mynut/: DailyEntryDao.kt  NutItemDaoTest.kt
app/src/androidTest/java/com/alexm/mynut/data/: OcrTextLlmScanEngineTest.kt  TextRecognitionSmokeTest.kt
app/src/androidTest/java/com/alexm/mynut/data/llm/: LlamaNativeSmokeTest.kt  LlamaTextEngineTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mynut_llm_jni.cpp
app/src/main/java/com/alexm/mynut/: MainActivity.kt  MyNutApplication.kt
app/src/main/java/com/alexm/mynut/data/: AppDatabase.kt  DailyEntry.kt  DailyEntryDao.kt  HttpModelDownloader.kt  LabelScanApi.kt  LocalLabelScanEngine.kt  LocalModelManager.kt  ModelDownloadState.kt  ModelDownloader.kt  NutItem.kt  NutItemDao.kt  OcrTextLlmScanEngine.kt
app/src/main/java/com/alexm/mynut/data/llm/: LlamaNative.kt  LlamaTextEngine.kt  LlmResponseParser.kt  PromptBuilder.kt
app/src/main/java/com/alexm/mynut/ui/calendar/: CalendarScreen.kt
app/src/main/java/com/alexm/mynut/ui/form/: FormScreen.kt  FormViewModel.kt
app/src/main/java/com/alexm/mynut/ui/home/: DailyEntryRow.kt  (+4 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/alexm/mynut/: DailySummaryTest.kt
app/src/test/java/com/alexm/mynut/data/: LocalModelManagerTest.kt
docs/superpowers/specs/: 2026-07-02-home-lazycolumn-key-collision-design.md  2026-07-09-local-llm-label-scan-design.md
gradle/: libs.versions.toml
(+5 files in other folders)
